tests/ui/consts/assoc_const_generic_impl.stderr
error[E0080]: index out of bounds: the length is 1 but the index is 4
  --> $DIR/assoc_const_generic_impl.rs:9:33
   |
LL |     const I_AM_ZERO_SIZED: () = [()][std::mem::size_of::<Self>()];
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `<u32 as ZeroSized>::I_AM_ZERO_SIZED` failed here

note: erroneous constant encountered
  --> $DIR/assoc_const_generic_impl.rs:11:9
   |
LL |         Self::I_AM_ZERO_SIZED;
   |         ^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn <u32 as ZeroSized>::requires_zero_size`
  --> $DIR/assoc_const_generic_impl.rs:18:5
   |
LL |     42_u32.requires_zero_size();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
